# fastapi-starter

./: Dockerfile  README.md  docker-compose.yaml  pyproject.toml  requirements.txt
alembic/: env.py
app/: main.py  settings.py
app/api/: api_router.py
app/api/endpoints/: auth.py  user.py
app/core/: jwt.py
app/dao/: user.py
app/services/: user.py  utils.py
